--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "next": "^14.0.4",
     "postcss": "8.4.24",
-    "prisma": "^4.15.0",
+    "prisma": "^5.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
