--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "4.15.0",
+    "@radix-ui/themes": "^2.0.3",
     "autoprefixer": "10.4.14",
+    "daisyui": "^4.6.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "^14.0.4",
@@ -22,6 +24,9 @@
     "prisma": "^5.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.4",
     "tailwindcss": "3.3.2"
   }
 }
